<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AUDINSA Salud Auditiva</string>
    <string name="app_id">597009720379617</string>
    <string name="txtPerfilesDialogoOk">Aceptar</string>
    <string name="txtPerfilesDialogoCancel">Cancelar</string>

    <!-- Items del menu -->
    <string name="menu_perfil">Perfil</string>
    <string name="menu_resultados">Resultados</string>
    <string name="menu_articulos">Artículos</string>
    <string name="menu_acerca_de">Acerca De</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_regresar">Regresar</string>
    <string name="menu_actualizar">Actualizar</string>
    <string name="menu_localizar">Consultorios</string>

    <!-- Perfiles Activity -->
    <string name="perfiles_agregarperfil">Agregar Perfil</string>
    <string name="imgFlechaContentDescription">Icono para entrar al perfil</string>
    <string name="imgPerfilContentDescription">Icono del perfil</string>
    <string name="title_activity_perfiles_mantenimiento">Perfil</string>

    <!-- Menu contextual y cuadros de dialogo para los perfiles -->
    <string name="txtPerfilesMenuContextualTitulo">Acciones</string>
    <string name="txtPerfilesMenuContextualEliminar">Eliminar Perfil</string>
    <string name="txtPerfilesMenuContextualModificar">Modificar Perfil</string>
    <string name="txtPerfilesDialogoTitulo">Confirmar acción</string>
    <string name="txtPerfilesDialogoDeseaEliminar">¿Está seguro que desea eliminar el perfil? (Esta acción no se puede revertir)</string>
    <string name="txtPerfilesToastPerfilEliminado">Perfil eliminado exitosamente</string>

    <!-- Examenes Activity -->
    <string name="title_activity_examenes">Exámenes</string>

    <!-- Perfiles Mantenimiento Activity -->
    <string name="lblNombre">Nombre</string>
    <string name="lblFechaNacimiento">Fecha de nacimiento (día/mes/año)</string>
    <string name="lblCorreoElectronico">Correo electrónico</string>
    <string name="btnAceptarAgregar">Agregar</string>
    <string name="btnAceptarModificar">Modificar</string>
    <string name="btnCancelar">Cancelar</string>

    <!-- Cuestionario Instrucciones Activity -->
    <string name="lblInstrucciones">Las siguientes 10 preguntas deben de ser respondidas con honestidad para así medir su nivel de escucha en situaciones diarias.</string>
    <string name="title_activity_cuestionario_instrucciones">Cuestionario</string>
    <string name="btnEmpezar">Empezar</string>

    <!-- Cuestionario Examen Activity -->
    <string name="title_activity_cuestionario_examen">Cuestionario</string>
    <string name="btnSi">Sí</string>
    <string name="btnNo">No</string>

    <string-array name="Preguntas">
        <item name="Pgta1">¿Considera que sube mucho el volumen del televisor?</item>
        <item name="Pgta2">¿Pide que le repitan constantemente las cosas?</item>
        <item name="Pgta3">¿Tiene dificultad para entender lo que le dicen en reuniones o lugares ruidosos?</item>
        <item name="Pgta4">¿Tiene que sentarse adelante en reuniones o en la iglesia para poder escuchar mejor?</item>
        <item name="Pgta5">¿Tiene dificultad para entender las voces femeninas o de los niños?</item>
        <item name="Pgta6">¿Escucha ruidos en el oído?</item>
        <item name="Pgta7">¿Tiene problemas para identificar de dónde vienen los sonidos?</item>
        <item name="Pgta8">¿Le cuesta entender cuando alguien le habla del otro lado de la habitación  u otro cuarto de la casa?</item>
        <item name="Pgta9">¿Le han dicho otras personas que usted no escucha bien?</item>
        <item name="Pgta10">¿Evita reuniones familiares o sociales por que le cuesta entender lo que le dicen?</item>
    </string-array>

    <!-- Cuestionario Resultado Activity -->

    <string name="strContactarResultadoPositivo">PASA.Estoy interesado en obtener una cita audiológica para mi valoración, mis datos son: "</string>
    <string name="strContactarResultadoNegativo">Contacte a un especialista.Estoy interesado en obtener una cita audiológica para mi valoración auditiva,mis datos son: "</string>
    <string name="strCompartirResultadoPositivo">Pasa,lo que sugiere que mi audición se encuentra en buenas condiciones, se recomienda una valoración auditiva aplicada por un especialista, contáctenos.</string>
    <string name="strCompartirResultadoNegativo">Falla,lo que sugiere que presento algún tipo de alteración audición y debo contactar a un especialista.</string>
    <string name="imgBorrarContentDescription">Icono para borrar el resultado</string>
    <string name="strCalificacion">De acuerdo a sus respuestas</string>
    <string name="strAcciones">Acciones</string>
    <string name="strRegresar">Regresar</string>

    <!-- Articulos Activity -->
    <string name="title_activity_articulos">Artículos</string>
    <string name="lblCargandoArticulos">Cargando artículos</string>

    <!-- ListView Articles Header Row -->
    <string name="title_listview_articles">Blog de Audinsa</string>

    <!-- ListView Articles Item Row -->
    <string name="imgBlogContentDescription">Avatar del blog</string>

    <!-- Artículos del menú principal -->
    <string name="strTxtInformacion">Conozca información importante acerca de su audición</string>
    <!-- Generales Para Resultado de Exam. -->

    <string name="strResultadoNegativoExamen">Contacte a un especialista para realizar una valoración auditiva, su audición podría estar presentando una alteración.</string>
    <string name="strResultadoPositivoExamen">Pasa,se recomienda una valoración auditiva aplicada por un especialista, si no ha realizado la suya contáctenos.</string>
    <string name="lblResultado">Resultado</string>
    <string name="menu_borrar">Borrar</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_contactar">Contactar</string>
    <string name="menu_titulo">Opciones</string>
    <string name="lblListViewVacioResultado">No hay resultados a mostrar</string>
    <string name="strAprobado">Pasa la prueba</string>
    <string name="strReprobado">Falla la prueba</string>

    <!-- Resultado Cuestionario Activity -->
    <string name="lblResultadoCuestionario">Resultado del cuestionario</string>

    <!-- Resultado Action Items -->
    <string name="imgContactarClinicaContentDescription">Icono de contactar a la clinica</string>
    <string name="lblContactarClinica">Contactar a la clínica</string>
    <string name="imgCompartirContentDescription">Icono de compartir resultado</string>
    <string name="lblCompartir">Compartir</string>
    <string name="lblBorrar">Borrar</string>
    <string name="menu_settings">Settings</string>
    <string name="txtResultadosDialogoDeseaEliminar">¿Está seguro que desea eliminar este resultado? (Esta acción no se puede revertir)</string>
    <string name="txtResultadoDialogoTituloDeseaEliminar">Eliminar Resultado</string>
    <string name="title_activity_cuestionario_resultado">Resultado Cuestionario</string>
    <string name="title_activity_sensibilidad_oido_resultado">Resultado Sensibilidad de Oido</string>
    <string name="title_activity_habla_ruido_resultado">Resultado Habla en Ruido</string>

    <!-- Mapa Localización -->
    <string name="title_activity_mapa_localizacion">Localización Clínica</string>

    <!-- Instrucciones Habla en Ruido -->

    <string name="title_activity_habla_en_ruido_instrucciones">Habla En Ruido</string>
    <string name="txtPasoHabla1">1. Asegúrese de estar en un lugar silencioso.</string>
    <string name="txtPasoHabla2">2. Coloque sus audífonos según corresponda el oído</string>
    <string name="txtPasoHabla3">3. El volumen del teléfono debe estar al 100%</string>

    <!-- Instrucciones Sensibilidad de oídos -->
    <string name="title_activity_sensibilidad_oidos_instrucciones">Sensibilidad de Oídos</string>
    <string name="txtPasos">Pasos</string>
    <string name="txtPasoSensibilidad1">1. Asegúrese de estar en un lugar silencioso.</string>
    <string name="txtPasoSensibilidad2">2. Coloque sus audífonos según corresponda el oído</string>
    <string name="txtPasoSensibilidad3">3. El volumen del teléfono debe estar al 100%</string>

    <!-- Instrucciones Sensibilidad de oídos -->
    <string name="lblInstruExamenSensibiOido">Indique en que oído percibió el sonido</string>
    <string name="lblExamenSensibiOidoIzq">Oído izquierdo</string>
    <string name="lblExamenSensibiOidoDer">Oído derecho</string>

    <!-- Resultado Sensibilidad de oídos Activity -->
    <string name="lblResultadoSensibilidaOido">Resultado del Exam. Sensibilidad de Oído</string>

    <!-- Acerca de Activity -->
    <string name="title_activity_acerca_de">Acerca De</string>
    <string name="lblSustituirPruebasAudiologoText">Esta aplicación no pretende sustituir las pruebas realizadas por un audiólogo</string>

    <!-- MENSAJES DE INFORMACION -->
    <string name="txtMantenimientoPerfilesToastPerfilAgregado">Perfil agregado satisfactoriamente</string>
    <string name="txtMantenimientoPerfilesToastPerfilActualizado">Perfil actualizado satisfactoriamente</string>
    <string name="cuestionario_nombre">Cuestionario</string>
    <string name="sensibilidad_oido_nombre">Sensibilidad de Oido</string>
    <string name="habla_ruido_nombre">Habla en Ruido</string>
    <string name="server_registering">Intento (%1$d/%2$d) de registrar en el servidor de Audinsa.</string>
    <string name="server_registered">Registrado en el servidor de Audinsa</string>
    <string name="server_register_error">No se pudo registrar en el servidor de Audinsa después de %1$d intento(s).</string>
    <string name="server_unregister_error">No se pudo desregistrar en el servidor de Audinsa (%1$s).</string>
    <string name="server_unregistered">Dispositivo desregistrado del servidor de Audinsa</string>
    <string name="gcm_registered">Registrado en el servidor de Google Messaging</string>
    <string name="gcm_unregistered">Desregistrado en el servidor de Google Messaging</string>
    <string name="gcm_message">Mensaje nuevo</string>
    <string name="gcm_error">Error de Google Messaging: (%1$s).</string>
    <string name="gcm_recoverable_error">Error de Google Messaging recuperable (%1$s).</string>
    <string name="gcm_deleted">Google Messaging borró %1$d mensaje(s) pendiente(s).</string>
    <string name="lblListViewVacioMensaje">No hay mensajes a mostrar</string>

    <!-- MENSAJES DE ERROR -->
    <string name="txtPerfilesToastPerfilErrorAlBorrar">Error al borrar el perfil</string>
    <string name="txtMantenimientoPerfilesToastErrorParsearDatos">Error al transformar datos del perfil</string>
    <string name="txtSensibOidosSegundoCheck">Por favor conecte los audífonos al teléfono</string>
    <string name="txtSensibOidosTercerCheck">Por favor establezca el volumen del teléfono al máximo usando la barra deslizadora</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sensibilidad_oido_examen">Sensibilidad de Oídos</string>
    <string name="title_activity_resultado_perfil">Resultados</string>
    <string name="txtResultadoErrorAlBorrar">Error al borrar el resultado</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Mensajeria Activity -->
    <string name="title_activity_messages">Mensajería</string>
    <string name="title_activity_messages_instructions">Ver mensajes de la Clínica Audinsa</string>
    <string name="lblTitleMessageDialog">Texto del mensaje:</string>

</resources>