<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_perfil"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_perfil"/>
    
    <item
        android:id="@+id/menu_resultados"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_resultados"/>

    <item
        android:id="@+id/menu_articulos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_articulos"/>
    
    <item
        android:id="@+id/menu_localizar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_localizar"/>
    
    <item
        android:id="@+id/menu_acerca_de"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_acerca_de"/>
    
    <item
        android:id="@+id/menu_salir"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_salir"/>
</menu>