<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical"
    tools:context=".HablaEnRuidoInstruccionesActivity" >

    <TableLayout
        android:id="@+id/tableInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_instructions_habla_ruido" >

        <TableRow>

            <TextView
                android:id="@+id/txtPaso1Habla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/txtPasos"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/chkPaso1InstrHabla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txtPasoHabla1" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/chkPaso2InstrHablaEnRuido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txtPasoHabla2" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/chkPaso3InstrHabla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPasoHabla3" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableBttns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableInstrucciones"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical|center_horizontal" >

        <TableRow>

            <Button
                android:id="@+id/btnEmpezar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_button_questionare"
                android:onClick="onEmpezarClick"
                android:text="@string/btnEmpezar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_questionare"
                android:onClick="onCancelarClick"
                android:text="@string/btnCancelar" />
        </TableRow>
    </TableLayout>

</RelativeLayout>