<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center"
    tools:context=".CuestionarioInstruccionesActivity" >

    <TextView
        android:id="@+id/txtViewInstrucciones"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_instructions_quesionnaire"
        android:clickable="false"
        android:text="@string/lblInstrucciones"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/tableBttns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewInstrucciones"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical|center_horizontal" >

        <TableRow>

            <Button
                android:id="@+id/btnEmpezar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_button_questionare"
                android:onClick="onEmpezarClick"
                android:text="@string/btnEmpezar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_questionare"
                android:onClick="onCancelarClick"
                android:text="@string/btnCancelar" />
            
          
        </TableRow>
    </TableLayout>

</RelativeLayout>